updated logo, updated some of the markup and styles

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Framer Glasgow Meetup</title>
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/print.css">
 </head>
 <body>
-    <h1>Framer Stuff Goes Here!</h1>
+    <header>
+        <nav class="main">
+            <ul>
+                <li class="menu-item"><a href="" title="">When</a></li>
+                <li class="menu-item"><a href="" title="">Where</a></li>
+                <li class="menu-item"><a href="" title="">What is Framer?</a></li>
+                <li class="menu-item"><a href="" title="">Contact</a></li>
+                <li class="menu-item"><a href="" title="">Something else</a></li>
+            </ul>
+        </nav>
+        <section class="hero">
+            <object data="images/logo.svg" type="image/svg+xml" class="logo">
+                <img src="images/logo.png" alt="Framer Scotland Logo">
+            </object>
+            <h1>Framer Scotland</h1>
+            <button></button>
+            <button></button>
+        </section>
+
+    </header>
 </html>
