--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,19 @@
                 <li class="menu-item"><a href="" title="">Where</a></li>
                 <li class="menu-item"><a href="" title="">What is Framer?</a></li>
                 <li class="menu-item"><a href="" title="">Contact</a></li>
-                <li class="menu-item"><a href="" title="">Something else</a></li>
             </ul>
         </nav>
         <section class="hero">
-            <object data="images/logo.svg" type="image/svg+xml" class="logo">
-                <img src="images/logo.png" alt="Framer Scotland Logo">
-            </object>
+            <div class="logo">
+                <object data="images/logo.svg" type="image/svg+xml">
+                    <img src="images/logo.png" alt="Framer Scotland Logo">
+                </object>
+            </div>
             <h1>Framer Scotland</h1>
-            <button></button>
-            <button></button>
+            <div class="info-buttons">
+                <button></button>
+                <button></button>
+            </div>
         </section>
 
     </header>
