basic copy written, header section adjusted, some layout included for copy

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav class="main">
             <ul>
+                <li class="menu-item"><a href="" title="">What is Framer?</a></li>
                 <li class="menu-item"><a href="" title="">When</a></li>
                 <li class="menu-item"><a href="" title="">Where</a></li>
-                <li class="menu-item"><a href="" title="">What is Framer?</a></li>
                 <li class="menu-item"><a href="" title="">Contact</a></li>
             </ul>
         </nav>
@@ -24,10 +24,14 @@
             </div>
             <h1>Framer Scotland</h1>
             <div class="info-buttons">
-                <button></button>
-                <button></button>
+                <button class="secondary">Something</button>
+                <button class="primary">Something Else</button>
             </div>
         </section>
-
     </header>
+    <section class="when">
+        <h2>What is Framer?</h2>
+        <div><p><a href="framerjs.com">Framer</a> is <em>the</em> code-based prototyping tool in use today. As the fields of UX, UI and interaction design grow more and more prototyping tools are being developed. Many of these tools, such as Invision or Marvel, are better for flows and prototyping user progression through an app and come with a minimal learning curve. Framer on the other hand is a little more difficult to get to grips with initially, especially if you haven't done any front end development before.</p>
+                <p>The beauty of Framer though is that once you are reasonably familiar with coding your prototypes in CoffeeScript the world is your oyster! Almost anything you can imagine is possible with Framer!</p></div>
+    </section>
 </html>
