--- a/app/index.html
+++ b/app/index.html
@@ -7,18 +7,12 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/print.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/ga.js"></script>
 </head>
 
 <body>
     <header>
-        <!--         <nav class="main">
-            <ul>
-                <li class="menu-item"><a href="" title="">What is Framer?</a></li>
-                <li class="menu-item"><a href="" title="">When</a></li>
-                <li class="menu-item"><a href="" title="">Where</a></li>
-                <li class="menu-item"><a href="" title="">Contact</a></li>
-            </ul>
-        </nav> -->
         <section class="hero">
             <div class="splash">
                 <object data="images/logo.svg" type="image/svg+xml" class="logo">
@@ -38,20 +32,20 @@
                 <form action="//johnenderby.us8.list-manage.com/subscribe/post?u=ce83e0e7aa0e416f9e4e5b29d&amp;id=5321d8a39f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                         <h2 class="mailer-subscribe">Subscribe to our mailing list</h2>
-                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                        <div class="mc-field-group">
+
+                        <div class="mc-field-group initial">
                             <label for="mce-FNAME">First Name <span class="asterisk">*</span>
                             </label>
-                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Elon">
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-LNAME">Last Name <span class="asterisk">*</span></label>
-                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" placeholder="Musk">
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
                             </label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="elon-musk@tesla.com">
                         </div>
 
                         <div id="mce-responses" class="clear">
@@ -62,6 +56,7 @@
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_ce83e0e7aa0e416f9e4e5b29d_5321d8a39f" tabindex="-1" value="">
                         </div>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                         <div class="clear">
                             <input type="submit" value="Subscribe" name="subscribe" class="button">
                         </div>
