improved mailer signup styling

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
             <div id="mc_embed_signup">
                 <form action="//johnenderby.us8.list-manage.com/subscribe/post?u=ce83e0e7aa0e416f9e4e5b29d&amp;id=5321d8a39f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                        <h2 class="mailer-subscribe">Subscribe to our mailing list</h2>
+                        <div class="signup-header"><h2 class="mailer-subscribe">Subscribe to our mailing list</h2></div>
 
                         <div class="mc-field-group initial">
                             <label for="mce-FNAME">First Name <span class="asterisk">*</span>
