added some styling and animations to the mailchimp sign-up form

--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Framer Glasgow Meetup</title>
-    <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/print.css">
     <script src="js/jquery.min.js"></script>
+    <script src="js/velocity.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/ga.js"></script>
 </head>
 
 <body>
+    <div class="overlay">
+        <img src="images/close.png" alt="close button" class="close-button">
+    </div>
     <header>
         <section class="hero">
             <div class="splash">
@@ -66,11 +70,13 @@
             <!--End mc_embed_signup-->
         </section>
     </header>
-    <section class="what">
+    <main>
         <div>
             <p>Framer Scotland is a monthly meetup for like-minded individuals to come together, talk about their experience with <a href="#">Framer.js</a> and <a href="#">Framer Studio</a>, learn something new and have a good time doing it.</p>
             <p>We will be meeting regularly on the first Thursday of every month, beginning in October, at a venue which is as yet a mystery. If you're interested in coming along, whether you are a seasoned prototyping professional, or a newbie looking to level up your skills fill in some information at the bottom of this page and we will be in touch.</p>
         </div>
-    </section>
-
+    </main>
+    <footer>
+        
+    </footer>
 </html>
