--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Framer Glasgow Meetup</title>
+    <title>Framer Scotland Meetup</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/print.css">
