--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/print.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/velocity.min.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/ga.js"></script>
 </head>
 
@@ -26,17 +24,20 @@
                     <h1>Framer Scotland</h1>
                     <img src="images/title.png" alt="Framer Scotland Logo" class="title">
                 </object>
+                <object data="images/framer.svg" type="image/svg+xml" class="window">
+                    <!-- <img src="images/logo.png" alt="Framer Scotland Logo" class="logo"> -->
+                </object>
             </div>
             <div class="info-buttons">
                 <button class="secondary">Get in touch</button>
-                <button class="primary">Sign Me Up!</button>
+                <button class="primary">Sign Up for News!</button>
             </div>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="//johnenderby.us8.list-manage.com/subscribe/post?u=ce83e0e7aa0e416f9e4e5b29d&amp;id=5321d8a39f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                        <div class="signup-header"><h2 class="mailer-subscribe">Subscribe to our mailing list</h2></div>
-
+                        <div class="signup-header">
+                            <h2 class="mailer-subscribe">Subscribe to our mailing list</h2></div>
                         <div class="mc-field-group initial">
                             <label for="mce-FNAME">First Name <span class="asterisk">*</span>
                             </label>
@@ -51,7 +52,6 @@
                             </label>
                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="elon-musk@tesla.com">
                         </div>
-
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
                             <div class="response" id="mce-success-response" style="display:none"></div>
@@ -72,11 +72,14 @@
     </header>
     <main>
         <div>
-            <p>Framer Scotland is a monthly meetup for like-minded individuals to come together, talk about their experience with <a href="#">Framer.js</a> and <a href="#">Framer Studio</a>, learn something new and have a good time doing it.</p>
-            <p>We will be meeting regularly on the first Thursday of every month, beginning in October, at a venue which is as yet a mystery. If you're interested in coming along, whether you are a seasoned prototyping professional, or a newbie looking to level up your skills fill in some information at the bottom of this page and we will be in touch.</p>
+            <p>Framer Scotland is a monthly meetup for like-minded individuals to come together, talk about their experience with <a href="https://github.com/koenbok/Framer" target="_blank" rel="noopener">Framer.js</a> and <a href="https://framerjs.com/" target="_blank" rel="noopener">Framer Studio</a>, learn something new and have a good time doing it.</p>
+            <p>We will be meeting regularly on the first Thursday of every month at a venue which is as yet a mystery. If you're interested in coming along, whether you are a seasoned prototyping professional, or a newbie looking to level up your skills, just click one of the buttons above and make sure you're always in the loop! Once we have enough interested folks (not many, but ideally more than one!) we will send out a newsletter and various social media posts to let everyone know when the first session will be.</p>
         </div>
     </main>
     <footer>
-        
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <script src="js/app.js"></script>
+</body>
+
 </html>
